# CMakeDemos

./: CMakeLists.txt  README.md  my_math_test.cpp
libs/: CMakeLists.txt  my_math.cpp  my_math.h
test/: CMakeLists.txt
test/src/: test.cpp
